--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "cd build && git add --all && git commit -m\"deploy\" && git push origin gh-pages && cd .."
   },
   "eslintConfig": {
     "extends": [
